--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python = "^3.8"
 apscheduler = "^3.6.3"
 elasticsearch = "^7.8.0"
 requests = "^2.24.0"
+fastapi = "^0.60.1"
+uvicorn = "^0.11.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
